---------------------------------------------------------------------------------------------------
Version: 0.2.13
Date: 2020-12-01
  Changes:
  Refactor:
    - better naming
---------------------------------------------------------------------------------------------------
Version: 0.2.12
Date: 2020-12-01
  Bugfixes:
    - fixing several UI-crashes
  Changes:
    - new selector
    - correct size of tab headers
---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: 2020-11-30
  Bugfixes:
    - fixed miners (and pumpjacks too) do not show machine-column
  Changes:
    - Localisation
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 2020-11-30
  Changes:
    - fixing release problem
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 2020-11-30
  Bugfixes:
    - fixed crash when loading autosave file with open help panel
  Refactor:
    - splitting Gui.lua
    - making events unconditional (except on-tick)
    - old Main.lua removed
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2020-11-30
  Changes:
    - Presenting burner production as a kind of recipe
    - restrict number of lines; provide tabs
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2020-11-29
  Bugfixes:
    - fixed crash when opening help from inventory
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 2020-11-29
  Bugfixes:
    - fixed crash when creating a new game
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2020-11-28
  Bugfixes:
  Changes:
    - Activation-icon on top left corner