@@ -10,46 +10,50 @@ local Selector = require("ingteb.Selector")
 
 local Gui = {Active = {}}
 
-function Gui:FindTarget(player)
-    assert(player)
-    assert(self.Active.ingteb)
-    assert(not self.Active.Selector)
-    assert(not self.Active.Presentator)
+function Gui:FindTargets(player)
+    assert(release or player)
+    assert(release or self.Active.ingteb)
+    assert(release or not self.Active.Selector)
+    assert(release or not self.Active.Presentator)
 
-    local function get()
-        local cursor = player.cursor_stack
-        if cursor and cursor.valid and cursor.valid_for_read then
-            return Database:GetItem(cursor.name)
-        end
-        local cursor = player.cursor_ghost
-        if cursor then return Database:GetItem(cursor.name) end
-
-        local cursor = player.selected
-        if cursor then
-            local result = Database:GetEntity(cursor.name)
-            if result.IsResource then
-                return result
-            else
-                return result.Item
-            end
-        end
-
-        local cursor = player.opened
-        if cursor then
-
-            local t = player.opened_gui_type
-            if t == defines.gui_type.custom then return end
-            if t == defines.gui_type.entity then return self.Entities[cursor.name] end
-
-            assert()
-        end
-        -- local cursor = global.Current.Player.entity_copy_source
-        -- assert(not cursor)
-
+    local cursor = player.cursor_stack
+    if cursor and cursor.valid and cursor.valid_for_read then
+        return {Database:GetItem(cursor.name)}
     end
 
-    local result = get()
-    return result
+    local cursor = player.cursor_ghost
+    if cursor then return {Database:GetItem(cursor.name)} end
+
+    local cursor = player.selected
+    if cursor then
+        local result = Database:GetEntity(cursor.name)
+        if result.IsResource then
+            return {result}
+        else
+            return {result.Item}
+        end
+    end
+
+    local cursor = player.opened
+    if cursor then
+
+        local t = player.opened_gui_type
+        if t == defines.gui_type.custom then assert(release) end
+        if t == defines.gui_type.entity then
+            assert(release or cursor.object_name == "LuaEntity")
+            local result = Array:new{Database:GetItem(cursor.name)}
+
+            local inventories = Dictionary:new(defines.inventory)--
+            :Select(function(_, name) return cursor.get_inventory(defines.inventory[name])end)--
+            :Where(function(inventory, name) return #inventory > 0 end)--
+
+            return result
+        end
+
+        assert(release)
+    end
+
+    return {}
 end
 
 function Gui:ScanActiveGui(player)
@@ -66,6 +70,7 @@ end
 
 function Gui:ClosePresentator(player)
     Helper.OnClose("Presentator", self.Active.Presentator)
+    global.Current.Gui = Dictionary:new()
     player.gui.screen.Presentator.destroy()
     self.Active.Presentator = nil
 end
@@ -76,7 +81,7 @@ function Gui:SelectTarget(player, targets)
 end
 
 function Gui:PresentTarget(player, target)
-    assert(target.Prototype)
+    assert(release or target.Prototype)
     Helper.ShowFrame(
         player, "Presentator", function(frame) return Presentator:new(frame, target) end
     )
@@ -85,19 +90,19 @@ function Gui:PresentTarget(player, target)
 end
 
 function Gui:OnMainButtonPressed(player)
-    assert(self.Active.ingteb)
-    assert(not self.Active.Selector or not self.Active.Presentator)
+    assert(release or self.Active.ingteb)
+    assert(release or not self.Active.Selector or not self.Active.Presentator)
 
     if self.Active.Selector then
         self:CloseSelector(player)
     elseif self.Active.Presentator then
         self:ClosePresentator(player)
     else
-        local target = self:FindTarget(player)
-        if target then
-            return self:PresentTarget(player, target)
+        local targets = self:FindTargets(player)
+        if #targets == 1 then
+            return self:PresentTarget(player, targets[1])
         else
-            self:SelectTarget(player)
+            self:SelectTarget(player, targets)
         end
     end
 end
@@ -105,7 +110,7 @@ end
 function Gui:EnsureMainButton()
     local player = global.Current.Player -- todo: multiplayer
     if player.gui.top.ingteb == nil then
-        assert(not self.Active.ingteb)
+        assert(release or not self.Active.ingteb)
 
         global.Current.Player.gui.top.add {
             type = "sprite-button",
