@@ -6,8 +6,14 @@ local Dictionary = Table.Dictionary
 local Database = require("ingteb.Database")
 local UI = require("core.UI")
 
+ColumnCount = 12 
+
 local Selector = {}
 
+---@param data Dictionary Dictionary where the key is searched
+---@param key string
+---@param value any Value to use if key is not jet contained in data
+---@return any the value stored at key
 local function EnsureKey(data, key, value)
     local result = data[key]
     if not result then
@@ -17,22 +23,54 @@ local function EnsureKey(data, key, value)
     return result
 end
 
+--- @param frame LuaGuiElement
+--- @param targets Array | nil
 function Selector:new(frame, targets)
+    self.Frame = frame
+    self.Targets = targets
     frame.caption = {"ingteb_utility.selector"}
 
-    assert(not targets)
+    if #targets > 0 then
+        self:ShowTargets()
+    else    
+        self:ShowAllItems()
+    end
+end
 
-    targets = game.item_prototypes
+function Selector:ShowTargets()
+
+    local frame = self.Frame.add {type = "flow", direction = "vertical"}
+    local targetPanel = frame.add {type = "table", column_count = ColumnCount}
+    frame.add {type = "line", direction = "horizontal"}
+    local recent = frame.add {type = "table", column_count = ColumnCount}
+
+    self.Targets:Select(
+        function(target)
+            targetPanel.add {
+                type = "sprite-button",
+                sprite = target.SpriteName,
+                name = target.CommonKey,
+                tooltip = target.LocalisedName,
+            }
+        end
+     )
+
+    return frame
+end
+
+function Selector:ShowAllItems()
+
+    self.Targets = game.item_prototypes
     local groups = Dictionary:new{}
     local maximalColumns = 0
-    for key, item in pairs(targets) do
+    for key, item in pairs(self.Targets) do
         local group = EnsureKey(groups, item.group.name, Dictionary:new{})
         local subgroup = EnsureKey(group, item.subgroup.name, Array:new{})
         subgroup:Append(item)
         if maximalColumns < subgroup:Count() then maximalColumns = subgroup:Count() end
     end
 
-    local groupPanel = frame.add {type = "tabbed-pane"}
+    local groupPanel = self.Frame.add {type = "tabbed-pane"}
 
     groups:Select(
         function(group)
@@ -48,7 +86,7 @@ function Selector:new(frame, targets)
             groupPanel.add_tab(tab, itemPanel)
             group:Select(
                 function(subgroup)
-                    local itemline = itemPanel.add {type = "table", column_count = 10}
+                    local itemline = itemPanel.add {type = "table", column_count = ColumnCount}
                     subgroup:Select(
                         function(item)
                             itemline.add {
@@ -63,6 +101,7 @@ function Selector:new(frame, targets)
             )
         end
     )
+    return groups
 end
 
 return Selector
